--- a/src/BlazorUI/Demo/Client/Shared/Components/ComponentDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Components/ComponentDemo.razor.scss
@@ -17,6 +17,7 @@
     box-sizing: border-box;
     background-clip: padding-box;
     background-color: $White;
+    overflow: hidden;
 }
 
 .component-name {
